deployment/minikube.yml
---
apiVersion: "apps/v1beta2"
kind: Deployment
metadata:
  name: "hello-lagom-minimal-service-v1-0-snapshot"
  labels:
    appName: "hello-lagom-minimal-service"
    appNameVersion: "hello-lagom-minimal-service-v1-0-snapshot"
spec:
  replicas: 2
  selector:
    matchLabels:
      appNameVersion: "hello-lagom-minimal-service-v1-0-snapshot"
  template:
    metadata:
      labels:
        appName: "hello-lagom-minimal-service"
        appNameVersion: "hello-lagom-minimal-service-v1-0-snapshot"
    spec:
      restartPolicy: Always
      containers:
        - name: "hello-lagom-minimal-service"
          image: "hello-lagom:1.0-SNAPSHOT"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 10000
              name: http
            - containerPort: 10001
              name: "akka-remote"
            - containerPort: 10002
              name: "akka-mgmt-http"
          volumeMounts: []
          command:
            - "/rp-start"
          args:
            - "bin/hello-impl"
          readinessProbe:
            httpGet:
              path: "/platform-tooling/ready"
              port: "akka-mgmt-http"
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: "/platform-tooling/healthy"
              port: "akka-mgmt-http"
            periodSeconds: 10
            initialDelaySeconds: 60
      volumes: []
---
apiVersion: v1
kind: Service
metadata:
  labels:
    appName: "hello-lagom-minimal-service"
  name: "hello-lagom-minimal-service"
spec:
  ports:
    - name: http
      port: 10000
      protocol: TCP
      targetPort: 10000
    - name: "akka-remote"
      port: 10001
      protocol: TCP
      targetPort: 10001
    - name: "akka-mgmt-http"
      port: 10002
      protocol: TCP
      targetPort: 10002
  selector:
    appName: "hello-lagom-minimal-service"
---
apiVersion: "apps/v1beta2"
kind: Deployment
metadata:
  name: "hello-proxy-lagom-minimal-service-v1-0-snapshot"
  labels:
    appName: "hello-proxy-lagom-minimal-service"
    appNameVersion: "hello-proxy-lagom-minimal-service-v1-0-snapshot"
spec:
  replicas: 2
  selector:
    matchLabels:
      appNameVersion: "hello-proxy-lagom-minimal-service-v1-0-snapshot"
  template:
    metadata:
      labels:
        appName: "hello-proxy-lagom-minimal-service"
        appNameVersion: "hello-proxy-lagom-minimal-service-v1-0-snapshot"
    spec:
      restartPolicy: Always
      containers:
        - name: "hello-proxy-lagom-minimal-service"
          image: "hello-proxy-lagom:1.0-SNAPSHOT"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 10000
              name: http
          volumeMounts: []
          command:
            - "/rp-start"
          args:
            - "bin/hello-proxy-impl"
      volumes: []
---
apiVersion: v1
kind: Service
metadata:
  labels:
    appName: "hello-proxy-lagom-minimal-service"
  name: "hello-proxy-lagom-minimal-service"
spec:
  ports:
    - name: http
      port: 10000
      protocol: TCP
      targetPort: 10000
  selector:
    appName: "hello-proxy-lagom-minimal-service"
---
apiVersion: "extensions/v1beta1"
kind: Ingress
metadata:
  name: "lagom-minimal-deployment-sample-ingress"
spec:
  rules:
    - http:
        paths:
          - path: "/proxy/rest-hello"
            backend:
              serviceName: "hello-proxy-lagom-minimal-service"
              servicePort: 10000
          - path: "/api/hello"
            backend:
              serviceName: "hello-lagom-minimal-service"
              servicePort: 10000
